# tinyos

./: Cargo.toml  build.rs  readme.md  todo.md
.zed/: settings.json
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/alloc_sys/: block.rs  map.rs  mod.rs
kernel/src/logger/: mod.rs
kernel/src/utils/: heap_array.rs  heap_vec.rs  mod.rs  mutable_option.rs  non_zero_rem.rs
kernel/src/vga/: char.rs  color.rs  mod.rs  pixel.rs
src/: main.rs
